# JMTLogger

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
examples/: basic_usage.py  color_test.py  import_example.py  multiprocess.py  threading.py
src/jmtlogger/: __init__.py  config.py  core.py  handlers.py
tests/: test_config.py  test_core.py  test_multiprocess.py
